--- a/index.html
+++ b/index.html
@@ -4917,13 +4917,21 @@ input.bg-success {
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@xenova/transformers@2.17.1"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <script src="js/activity_database.js"></script>
 <script src="js/decision104.js"></script>
 <script src="js/industrial_areas_data.js"></script>
 
 <script type="module" src="js/vector_engine.js"></script>
+
+<script src="js/voice_handler.js"></script>
+<script src="js/response_formatter.js"></script>
+<script src="js/neural_search_v6.js"></script>
+<script src="js/ai_assistant_core.js"></script>
+<script src="js/main_logic.js"></script>
+<script src="js/assistant_ui.js"></script>
+<script src="js/app.js"></script>
 
 <script>
     window.addEventListener('vectorEngineReady', () => {
@@ -4933,19 +4941,6 @@ input.bg-success {
             setTimeout(() => loader.remove(), 500);
         }
     });
-
-    setTimeout(() => {
-        const loader = document.getElementById('ai-loader-overlay');
-        if(loader) loader.remove();
-    }, 30000);
 </script>
-
-<script src="js/voice_handler.js"></script>
-<script src="js/response_formatter.js"></script>
-<script src="js/neural_search_v6.js"></script>
-<script src="js/ai_assistant_core.js"></script>
-<script src="js/main_logic.js"></script>
-<script src="js/assistant_ui.js"></script>
-<script src="js/app.js"></script>
 </body>
 </html>
