--- a/index.html
+++ b/index.html
@@ -4927,10 +4927,11 @@ input.bg-success {
 
 <script src="js/voice_handler.js"></script>
 <script src="js/response_formatter.js"></script>
+
 <script src="js/neural_search_v6.js"></script>
+
 <script src="js/ai_assistant_core.js"></script>
-<script src="js/main_logic.js"></script>
-<script src="js/assistant_ui.js"></script>
+<script src="js/main_logic.js"></script> <script src="js/assistant_ui.js"></script>
 <script src="js/app.js"></script>
 
 <script>
