--- a/index.html
+++ b/index.html
@@ -4891,7 +4891,7 @@ input.bg-success {
 <script src="js/industrial_areas_data.js"></script>
 
 <!-- 2. محرك المتجهات -->
-<script src="js/vector_engine.js"></script> <!-- ⚠️ أزل type="module" -->
+<script type="module" src="js/vector_engine_v2.js"></script>
 
 <!-- 3. النواة الذكية للمساعد -->
 <script src="js/ai_assistant_core.js"></script>
