--- a/index.html
+++ b/index.html
@@ -1804,7 +1804,26 @@ input.bg-success {
         z-index: 100000;
     }
 
+/* smart_styles.css */
+.smart-toggle {
+    padding: 10px;
+    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    color: white;
+    border-radius: 10px;
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
 
+.smart-badge {
+    background: #10b981;
+    color: white;
+    padding: 2px 8px;
+    border-radius: 12px;
+    font-size: 0.8em;
+    margin-left: 5px;
+}
 
 </style>
 
@@ -4896,6 +4915,8 @@ input.bg-success {
 <script src="js/neural_search_v6.js"></script>
 
 <script src="js/ai_assistant_core.js"></script>
+<script src="js/smart_integration.js"></script>
+	
 <script src="js/main_logic.js"></script> <script src="js/assistant_ui.js"></script>
 <script src="js/app.js"></script>
 
