--- a/index.html
+++ b/index.html
@@ -4888,14 +4888,16 @@ input.bg-success {
 <script src="js/decision104.js"></script>
 <script src="js/industrial_areas_data.js"></script>
 
-<script type="module" src="js/vector_engine.js"></script>
+<script type="module" src="js/vector_engine_v2.js"></script>
+
 
 <script src="js/voice_handler.js"></script>
 <script src="js/response_formatter.js"></script>
 
 <script src="js/neural_search_v6.js"></script>
 
-<script src="js/ai_assistant_core.js"></script>
+<script src="js/smart_assistant_v11.js"></script>
+
 
 	
 <script src="js/main_logic.js"></script> <script src="js/assistant_ui.js"></script>
